Yet more finishing touches